# thrust-helloworld

./: .gitignore  CMakeLists.txt  README.md  all_gpu.cu  get_compute_capability.cu  libA.cu  libB.cu  libB.h  main.cu  naive.cu  separate.cxx
